syntax = "proto3";
package image.uploader;

option go_package = "gen/";

service ImageUploadService {
  rpc Upload(stream ImageUploadRequest) returns (ImageUploadResponse) {}
}

message ImageUploadRequest {
  oneof file {
    FileMeta file_meta = 1;
    bytes data = 2;
  }

  message FileMeta {
    string file_name = 1;
  }
}

message ImageUploadResponse {
  string uuid = 1;
  int32 size = 2;
  string content_type = 3;
  string file_name = 4;
}
